--- a/fe/src/app/features/landing-page/components/layout/layout.component.html
+++ b/fe/src/app/features/landing-page/components/layout/layout.component.html
@@ -3,7 +3,7 @@
         <!-- TOP INFO -->
         <div class="row">
             <div class="col c-12">
-                <app-top-info (notifyToggleTabletHamburger)="handleToggleTabletHamburber()"></app-top-info>
+                <app-top-info (notifyToggleHamburger)="handleToggleHamburber()"></app-top-info>
             </div>
         </div>
 
