--- a/fe/src/app/features/landing-page/components/top-info/top-info.component.html
+++ b/fe/src/app/features/landing-page/components/top-info/top-info.component.html
@@ -37,5 +37,5 @@
         </li>
     </ul>
 
-    <app-hamburger (notifyToggleTabletHamburger)="handleToggleTabletHamurber()" style="display: contents" *ngIf="(getViewportWidth() <= getBreakpointValues('TABLET')!)"></app-hamburger>
+    <app-hamburger (notifyToggleHamburger)="handleToggleHamurber()" style="display: contents" *ngIf="(getViewportWidth() <= getBreakpointValues('TABLET')!)"></app-hamburger>
 </div>
