--- a/fe/src/app/auth/components/google-login/google-login.component.html
+++ b/fe/src/app/auth/components/google-login/google-login.component.html
@@ -13,3 +13,10 @@
         Đăng nhập với Google
     </span>
 </section>
+
+<section class="wrapper__containter__login" *ngIf="template == 'LOGIN_MOBILE'" (click)="handleGoogleLogin()">
+    <i class="fa-brands fa-google"></i>
+    <span class="wrapper__containter__login__text">
+        Đăng nhập với Google
+    </span>
+</section>
