--- a/fe/src/app/features/list-page/components/list-page-mobile/list-page-mobile.component.css
+++ b/fe/src/app/features/list-page/components/list-page-mobile/list-page-mobile.component.css
@@ -7,8 +7,12 @@
     width: 100%;
     height: 60px;
     border-bottom: 1px solid var(--dark-border-color);
+    background-color: var(--dark-panel-color);
     display: flex;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .header__title {
@@ -101,6 +105,9 @@
     display: flex;
     align-items: center;
     padding: 6px;
+    position: sticky;
+    top: 60px;
+    background-color: var(--dark-panel-color);
 }
 
 .body__search-info-group__text-group {
@@ -132,7 +139,7 @@
     font-size: var(--fs-less-1);
     background-color: var(--level3-color);
     width: 75px;
-    height: 33px;
+    height: 30px;
     border: 1px solid var(--dark-border-color);
 }
 
@@ -146,6 +153,7 @@
     column-gap: var(--masonry-gap);
     column-count: 2;
     z-index: 0;
+    padding-bottom: 54px;
 }
 
 .body__gallery-group__list__item {
@@ -161,7 +169,6 @@
     border-radius: var(--border-radius-1);
     z-index: 1;
 }
-
 /*#endregion*/
 
 /*#region SKELETON */
@@ -242,6 +249,7 @@
     gap: 12px;
     height: 12%;
     min-height: 60px;
+    max-width: 90vw;
 }
 
 .preview-drawing-container__button-group button {
@@ -270,22 +278,176 @@
 
 /*#region HAMBURGER CONTENT */
 .hamburger-content {
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: 60px;
+    height: 0px;
     right: 0;
-    width: 0%;
-    height: 100%;
-    /* background-color: var(--dark-background-color); */
-    background-color: red;
+    width: 100%;
+    background-color: var(--dark-background-color);
     transition: 0.3s ease-in-out;
+    z-index: 2;
+    padding: 12px;
     
     opacity: 0;
     pointer-events: none;
+    border-bottom: 1px solid var(--dark-border-color);
 }
 
 .hamburger-content.activated {
-    width: 100%;
     opacity: 1;
     pointer-events: all;
+    height: 100%;
+}
+
+.hamburger-content__user-info {
+    background-color: var(--dark-background-color);
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 9px 18px;
+    border: 1px solid var(--dark-border-color);
+    border-radius: var(--border-radius-2);
+}
+
+.hamburger-content__user-info__avatar {
+    border-radius: 100%;
+    width: 45px;
+    aspect-ratio: 1/1;
+}
+
+.hamburger-content__user-info__user-fullname {
+    flex: 1;
+    padding-left: 12px;
+    display: flex;
+    align-items: center;
+}
+
+.hamburger-content__user-functionalities {
+    margin-top: 12px;
+    background-color: var(--dark-background-color);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    border: 1px solid var(--dark-border-color);
+    border-radius: var(--border-radius-2);
+}
+
+.hamburger-content__user-functionalities__item {
+    flex: 1;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    padding-left: 30px;
+}
+
+.hamburger-content__user-functionalities__item i {
+    width: 45px;
+}
+
+.hamburger-content__user-functionalities__item + .hamburger-content__user-functionalities__item {
+    border-top: 1px solid var(--dark-border-color);
+}
+
+.hamburger-content__contact {
+    width: 100%;
+    background-color: var(--dark-background-color);
+    border: 1px solid var(--dark-border-color);
+    border-radius: var(--border-radius-2);
+    margin-top: 12px;
+}
+
+.hamburger-content__contact__top {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    padding: 9px;
+    border-bottom: 1px solid var(--dark-border-color);
+}
+
+.hamburger-content__contact__top__item {
+    display: flex;
+    padding: 12px;
+    align-items: center;
+    gap: 12px;
+    padding: 9px 12px;
+}
+
+.hamburger-content__contact__bottom {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    padding: 18px 0;
+}
+
+.hamburger-content__footer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    padding: 12px 0;
+    padding-right: 4.2px;
+    margin-top: 12px;
+    border-radius: var(--border-radius-2);
+    border: 1px solid var(--dark-border-color);
+}
+
+.hamburger-content__footer i {
+    font-size: var(--fs-less-2);
+    color: var(--primary-color);
+}
+/*#endregion*/
+
+/*#region NAVBAR */
+.navbar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    height: 51px;
+    border-top: 1px solid var(--dark-border-color);
+    background: var(--level2-color);
+    backdrop-filter: blur(6px);
+}
+
+.navbar__list {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.navbar__list__item {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+}
+
+.navbar__list__item.activated {
+    color: var(--secondary-color);
+}
+
+.navbar__list__item i {
+    position: relative;
+}
+
+.fa-solid span {
+    position: absolute;
+    font-size: var(--fs-less-2);
+    color: white;
+    background-color: #da1814d0;
+    position: absolute;
+    padding: 3px;
+    padding-bottom: 1.8px;
+    border-radius: 9px;
+    bottom: -6px;
+    left: -6px;
 }
 /*#endregion*/
