--- a/fe/src/app/auth/components/google-login/google-login.component.css
+++ b/fe/src/app/auth/components/google-login/google-login.component.css
@@ -27,7 +27,6 @@
 }
 
 .wrapper__containter__login {
-    border: 1px solid var(--dark-border-color);
     width: 100%;
     height: 45px;
     display: flex;
@@ -38,10 +37,17 @@
 
 .wrapper__containter__login__text {
     padding: 12px;
+    flex: 1;
+    border: 1px solid var(--dark-border-color);
+    border-bottom-right-radius: var(--border-radius-2);
+    border-top-right-radius: var(--border-radius-2);
 }
 
 .wrapper__containter__login i {
-    border-right: 1px solid var(--dark-border-color);
+    border: 1px solid var(--google-color);
+    border-bottom-left-radius: var(--border-radius-2);
+    border-top-left-radius: var(--border-radius-2);
+    border-right: none;
     width: 45px;
     height: 100%;
     background-color: var(--google-color);
