--- a/fe/src/assets/css/animations.css
+++ b/fe/src/assets/css/animations.css
@@ -5,6 +5,26 @@
     }
 }
 
+@keyframes slide-bottom-top-fade {
+    0% {
+        opacity: 0;
+        transform: translateY(30%);
+    } 100% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
+
+@keyframes slide-left-right-fade {
+    0% {
+        opacity: 0;
+        transform: translateX(90%);
+    } 100% {
+        opacity: 1;
+        transform: translateX(0%);
+    }
+}
+
 @keyframes gradient-text-animation {
     from {
         background-position: 0 50%;
