--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level1-category/mobile-level1-category.component.html
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level1-category/mobile-level1-category.component.html
@@ -1,16 +1,7 @@
 <div class="wrapper">
     <ul class="level1-category-list">
-        <li class="level1-category-list__item">
-            Con người
-        </li>
-        <li class="level1-category-list__item">
-            Con người
-        </li>
-        <li class="level1-category-list__item">
-            Con người
-        </li>
-        <li class="level1-category-list__item">
-            Con người
+        <li (click)="moveTolevel2(x.vietnameseName)" *ngFor="let x of categoryLevel1List" class="level1-category-list__item">
+            {{ x.vietnameseName }}
         </li>
     </ul>
 </div>
