--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-category-tag.component.css
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-category-tag.component.css
@@ -29,6 +29,11 @@
     flex: 1;
 }
 
+.header__breadcrumb__item {
+    transition: 0.3s ease-in-out;
+    animation: slide-left-right-fade 0.3s ease-in-out;
+}
+
 .header__breadcrumb__item.slash {
     color: var(--secondary-color);
 }
@@ -39,11 +44,11 @@
     align-items: center;
     height: 100%;
     justify-content: flex-end;
-    gap: 18px;
+    padding-right: 9px;
+    gap: 21px;
     width: 90px;
 }
 
 .body {
     height: 210px;
-    padding: 12px;
 }
